CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/sfrosit_t_emplmt_pay_stub_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_emplmt_pay_stub_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_emplmt_pay_stub_hist</externalName>
    <label>Employment Pay Stub History</label>
    <pluralLabel>Employment Pay Stub History</pluralLabel>
</CustomObject>