CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/amt_income_gross__c.field-meta.xml
<CustomField>
    <fullName>amt_income_gross__c</fullName>
    <description>amt_income_gross</description>
    <externalDeveloperName>amt_income_gross</externalDeveloperName>
    <label>Gross Amount before taxes and deductions</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>