CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/amt_tips_avg__c.field-meta.xml
<CustomField>
    <fullName>amt_tips_avg__c</fullName>
    <description>amt_tips_avg</description>
    <externalDeveloperName>amt_tips_avg</externalDeveloperName>
    <label>Tips/Commisions/Bonuses</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>