CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/cde_freq_pay__c.field-meta.xml
<CustomField>
    <fullName>cde_freq_pay__c</fullName>
    <description>cde_freq_pay</description>
    <externalDeveloperName>cde_freq_pay</externalDeveloperName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>