CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/cde_source_vrfyd_pay__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_pay__c</fullName>
    <description>cde_source_vrfyd_pay</description>
    <externalDeveloperName>cde_source_vrfyd_pay</externalDeveloperName>
    <label>Source Verification Pay Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>