CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/cde_type_emplmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_emplmt__c</fullName>
    <description>cde_type_emplmt</description>
    <externalDeveloperName>cde_type_emplmt</externalDeveloperName>
    <label>Employment Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>