CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/cnt_worked_hours_stub_pay__c.field-meta.xml
<CustomField>
    <fullName>cnt_worked_hours_stub_pay__c</fullName>
    <description>cnt_worked_hours_stub_pay</description>
    <externalDeveloperName>cnt_worked_hours_stub_pay</externalDeveloperName>
    <label>Hours Worked and Care Needed</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>