CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/dte_pay__c.field-meta.xml
<CustomField>
    <fullName>dte_pay__c</fullName>
    <description>dte_pay</description>
    <externalDeveloperName>dte_pay</externalDeveloperName>
    <label>Pay Date</label>
    <type>Date</type>
</CustomField>