CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/idn_emplmt_income__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_income__c</fullName>
    <description>idn_emplmt_income</description>
    <externalDeveloperName>idn_emplmt_income</externalDeveloperName>
    <label>Idn_emplmt_income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>