CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/idn_stub_pay__c.field-meta.xml
<CustomField>
    <fullName>idn_stub_pay__c</fullName>
    <description>idn_stub_pay</description>
    <externalDeveloperName>idn_stub_pay</externalDeveloperName>
    <label>Pay Stub ID</label>
    <length>50</length>
    <referenceTargetField>T_EMPLMT_PAY_STUB__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_EMPLMT_PAY_STUB__c</referenceTo>
    <relationshipLabel>Employment Pay Stub Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_emplmt_pay_stub_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>