CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_pay_stub_hist__x/fields/idn_stub_pay_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_stub_pay_hist__c</fullName>
    <description>idn_stub_pay_hist</description>
    <externalDeveloperName>idn_stub_pay_hist</externalDeveloperName>
    <label>Pay Stub ID Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>